--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -36,7 +36,18 @@ clean-targets:         # directories to be removed by `dbt clean`
 # using the `{{ config(...) }}` macro.
 
 models:
-  my_new_project:
-    # Applies to all files under models/example/
-    example:
+
+  dbt_databricks_project:
+    #+materialized: table
+    gold:
+      ##any table created in gold by default will be materialized as view
       +materialized: table
+      +schema: wrk_training
+    silver:
+      ##any table created in gold by default will be materialized as view
+      +materialized: table
+      +schema: wrk_training
+    bronze:
+      ##any table created in gold by default will be materialized as view
+      +materialized: table
+      +schema: wrk_training
