--- a/models/gold/gold.yml
+++ b/models/gold/gold.yml
@@ -5,3 +5,13 @@ models:
   - name: gold_churn_daily
     config: 
       materialized: table
+    columns:
+      - name: Country
+        tests:
+          - accepted_values:
+              values: ['France','Spain','Germany']
+      - name: Country
+        tests:
+          - dbt_expectations.expect_column_values_to_not_be_in_set: ##expected to fail
+              value_set: ['France','Spain','Germany']
+          
