--- a/models/silver/unit_test.yml
+++ b/models/silver/unit_test.yml
@@ -1,5 +1,5 @@
 unit_tests:
-  - name: test_order_status_cleanup # this is the unique name of the test
+  - name: test_order_status # this is the unique name of the test
     description: Test my status case/when cleanup logic 
     model: silver_churn # name of the model I'm unit testing 
     given: # the mock data for your inputs
@@ -14,4 +14,4 @@ unit_tests:
         - {custID: 1, Status: Stuggle}
         - {custID: 2, Status: Not bad}
         - {custID: 3, Status: Not bad}
-        - {custID: 4, Status: Perfect} ##Should fail
+        - {custID: 4, Status: Perfect} 
