--- a/packages.yml
+++ b/packages.yml
@@ -2,5 +2,7 @@ packages:
   - package: dbt-labs/dbt_utils
     version: [">=0.8.0", "<2.0.0"]
   - package: EqualExperts/dbt_unit_testing
-    version: 0.4.12
+    version: 0.4.20
+  - package: calogica/dbt_expectations
+    version: 0.10.4
   
